@@ -1,42 +1,62 @@
 #!/bin/bash
+# -----------------------------------------------------------------------------
+# startup.sh - Start Script for Jetty + eXist
+#
+# $Id: startup.sh,v 1.6 2002/12/28 17:37:22 wolfgang_m Exp $
+# -----------------------------------------------------------------------------
 
-unset LANG
+exist_home () {
+	case "$0" in
+		/*)
+			p=$0
+		;;
+		*)
+			p=`/bin/pwd`/$0
+		;;
+	esac
+		(cd `/usr/bin/dirname $p` ; /bin/pwd)
+}
 
 if [ -z "$EXIST_HOME" ]; then
-    EXIST_HOME_1=`dirname "$0"`
-    EXIST_HOME=`dirname "$EXIST_HOME_1"`
+	EXIST_HOME_1=`exist_home`
+	EXIST_HOME="$EXIST_HOME_1/.."
 fi
 
-if [ ! -f "$EXIST_HOME/conf.xml" ]; then
-    EXIST_HOME_1="$EXIST_HOME/.."
-    EXIST_HOME=$EXIST_HOME_1
+if [ ! -f "$EXIST_HOME/start.jar" ]; then
+	echo "Unable to find start.jar. Please set EXIST_HOME to point to your installation directory."
+	exit 1
 fi
 
-if [ -z "$EXIST_BASE" ]; then
-    EXIST_BASE=$EXIST_HOME
+OPTIONS="-Dexist.home=$EXIST_HOME"
+
+# set java options
+if [ -z "$JAVA_OPTIONS" ]; then
+    export JAVA_OPTIONS="-Xms32000k -Xmx384000k -Dfile.encoding=UTF-8"
 fi
 
-LOCALCLASSPATH=$JAVA_HOME/lib/tools.jar:$EXIST_BASE/exist.jar:$EXIST_BASE
-JARS=`ls -1 $EXIST_BASE/lib/*.jar`
-for jar in $JARS
-do
-   LOCALCLASSPATH=$jar:$LOCALCLASSPATH ;
-done
+JAVA_ENDORSED_DIRS="$EXIST_HOME"/lib/endorsed
 
-OLD_LD_LIBRARY_PATH=$LD_LIBRARY_PATH
-export LD_LIBRARY_PATH=$EXIST_BASE/lib
+JAVA_OPTIONS="$JAVA_OPTIONS -Djava.endorsed.dirs=$JAVA_ENDORSED_DIRS"
 
-# use xerces as SAX parser
-SAXFACTORY=org.apache.xerces.jaxp.SAXParserFactoryImpl
-
-LOCALCLASSPATH=$CLASSPATH:$LOCALCLASSPATH
-
-if [ -z "$JAVA_OPTS" ]; then
-    JAVA_OPTS="-Xms64000k -Xmx128000k"
+# save LANG
+if [ -n "$LANG" ]; then
+	OLD_LANG="$LANG"
 fi
+# set LANG to UTF-8
+LANG=en_US.UTF-8
 
-#PROF=-Xrunjmp:nomethods
+# save LD_LIBRARY_PATH
+if [ -n "$LD_LIBRARY_PATH" ]; then
+	OLD_LIBRARY_PATH="$LD_LIBRARY_PATH"
+fi
+# add lib/core to LD_LIBRARY_PATH for readline support
+export LD_LIBRARY_PATH="$LD_LIBRARY_PATH:$EXIST_HOME/lib/core"
 
-$JAVA_HOME/bin/java $PROF $JAVA_OPTS -Djavax.xml.parsers.SAXParserFactory=$SAXFACTORY -Dexist.home=$EXIST_HOME -classpath $LOCALCLASSPATH org.exist.InteractiveClient $*
+$JAVA_HOME/bin/java $JAVA_OPTIONS $OPTIONS -jar "$EXIST_HOME/start.jar" client $*
 
-export LD_LIBRARY_PATH=$OLD_LD_LIBRARY_PATH
+if [ -n "$OLD_LIBRARY_PATH" ]; then
+	LD_LIBRARY_PATH="$OLD_LIBRARY_PATH"
+fi
+if [ -n "$OLD_LANG" ]; then
+	LANG="$OLD_LANG"
+fi
