@@ -1,32 +1,55 @@
 #!/bin/bash
-unset LANG
+# -----------------------------------------------------------------------------
+# startup.sh - Start Script for Jetty + eXist
+#
+# $Id: startup.sh,v 1.6 2002/12/28 17:37:22 wolfgang_m Exp $
+# -----------------------------------------------------------------------------
+
+exist_home () {
+	case "$0" in
+		/*)
+			p=$0
+		;;
+		*)
+			p=`/bin/pwd`/$0
+		;;
+	esac
+		(cd `/usr/bin/dirname $p` ; /bin/pwd)
+}
 
 if [ -z "$EXIST_HOME" ]; then
-    EXIST_HOME_1=`dirname "$0"`
-    EXIST_HOME=`dirname "$EXIST_HOME_1"`
+	EXIST_HOME_1=`exist_home`
+	EXIST_HOME="$EXIST_HOME_1/.."
 fi
 
-if [ ! -f "$EXIST_HOME/conf.xml" ]; then
-    EXIST_HOME_1="$EXIST_HOME/.."
-    EXIST_HOME=$EXIST_HOME_1
+if [ ! -f "$EXIST_HOME/start.jar" ]; then
+	echo "Unable to find start.jar. Please set EXIST_HOME to point to your installation directory."
+	exit 1
 fi
 
-if [ -z "$EXIST_BASE" ]; then
-    EXIST_BASE=$EXIST_HOME
+OPTIONS="-Dexist.home=$EXIST_HOME"
+
+if [ -n "$JETTY_HOME" ]; then
+	OPTIONS="-Djetty.home=$JETTY_HOME $OPTIONS"
 fi
 
-LOCALCLASSPATH=$JAVA_HOME/lib/tools.jar:$EXIST_BASE/exist.jar:$EXIST_BASE
-JARS=`ls -1 $EXIST_BASE/lib/*.jar`
-for jar in $JARS
-do
-   LOCALCLASSPATH=$jar:$LOCALCLASSPATH ;
-done
+# save LANG
+if [ -n "$LANG" ]; then
+	OLD_LANG="$LANG"
+fi
+# set LANG to UTF-8
+LANG=en_US.UTF-8
 
-if [ -z "$JAVA_OPTS" ]; then
-    JAVA_OPTS="-Xms64000k -Xmx256000k"
+# set java options
+if [ -z "$JAVA_OPTIONS" ]; then
+    export JAVA_OPTIONS="-Xms256000k -Xmx256000k -Dfile.encoding=UTF-8"
 fi
 
-SAXFACTORY=org.apache.xerces.jaxp.SAXParserFactoryImpl
-#PROF=-Xrunjmp:nomethods
+JAVA_ENDORSED_DIRS="$EXIST_HOME"/lib/endorsed
+JAVA_OPTIONS="$JAVA_OPTIONS -Djava.endorsed.dirs=$JAVA_ENDORSED_DIRS"
 
-$JAVA_HOME/bin/java $PROF $JAVA_OPTS -Djavax.xml.parsers.SAXParserFactory=$SAXFACTORY -Dexist.home=$EXIST_HOME -classpath $LOCALCLASSPATH:$CLASSPATH org.exist.Server $*
+$JAVA_HOME/bin/java $JAVA_OPTIONS $OPTIONS -jar "$EXIST_HOME/start.jar" standalone $*
+
+if [ -n "$OLD_LANG" ]; then
+	LANG="$OLD_LANG"
+fi
